# matryx-shadertoy

./: .clang-format  CMakeLists.txt  README.md
glad/include/glad/: egl.h  gles2.h
glad/src/: egl.c
shaders/: output.glsl  vertex.glsl
shaders/conway/: 00_life.glsl  01_scale.glsl  02_trail.glsl  03_mix.glsl  10_color.glsl  prelude00_base.glsl
shaders/prelude/: 00_base.glsl  10_bounding_box.glsl  10_colors.glsl  10_curves.glsl  10_debug.glsl  10_rand.glsl  10_texture.glsl  99_render.glsl
shaders/rain/: 00_rain.glsl  10_fade_f4.glsl
shaders/test/: 0_test.glsl  1_out.glsl
shaders/test_2/: 0_check.glsl  1_0_horiz.glsl  1_1_vert.glsl
shaders/test_curve/: 0_test.glsl
shaders/waggle/: 00_grid_f.glsl  30_color_f4.glsl
shaders/wave/: 0.glsl  1.glsl  2_out.glsl
shaders/wave_2/: 0_thresh.glsl  1-0_neighbours_h.glsl  1-1_neighbours_v.glsl  2-0_weights_h.glsl  2-1_weights_v.glsl  3_grid.glsl  99_out.glsl  _grid._glsl  prelude_0.glsl
shaders/wave_3/: 00_grid_f.glsl  05_sharpen_f.glsl  0_grid_f.glsl  10_scroll_f.glsl  1_out_f4.glsl  30_color_f4.glsl  40_border.glsl  prelude_00.glsl
shaders/wave_4/: 0_grid.glsl  0_grid_f.glsl  1_median.glsl  1_median_f.glsl  2_edge_f.glsl  3_edge_blur_f.glsl  4_trail_a.glsl  4_trail_a_f4.glsl  90_map.glsl  90_map_f4.glsl  91_mix_blur.glsl  91_mix_blur_f4.glsl  _5_median._glsl  prelude_0.glsl
shaders/wave_og/: 0_grid.glsl  0_grid_f.glsl  1_out_f4.glsl  99_mix.glsl
src/: ansi.hpp  fb.cpp  gl.cpp  gl.hpp  main.cpp  pixelserver.cpp  pixelserver.hpp  timer.cpp  timer.hpp
